Changes for 1.8.16

Changes for 1.8.16rc1

...G...... [ZBX-5201] added handling of PerfCounter error PDH_CALC_NEGATIVE_DENOMINATOR (dimir)
A......... [DEV-524] fixed the ability to override LDAP configuration when calling user.login (Pavels)
.......PS. [ZBX-5988] fixed memory leak in functions evaluate_LOGEVENTID(), evaluate_STR(). Thanks to Takanori Suzuki for patch. (Andris)
..F....... [ZBX-3754] fixed "Undefined variable" in the trigger expression constructor (Sasha)
..F....... [ZBX-3038] fixed the trigger expression constructor to parse expressions created in log wizard (Sasha)
..F....... [ZBX-2793] added possibility to add macros without an item in the trigger expression (Sasha)
..F....... [ZBX-5896] fixed inserting OR condition the trigger expression constructor (Sasha)
A.F....... [ZBX-5833] fixed inserting a macro in the trigger expression constructor (Sasha)
..F....... [ZBX-4695] added support of simple check keys with user macros in the trigger expression (Sasha)
..F....... [ZBX-5884] improved the trigger expression constructor to work with parentheses (Sasha)
A.F....... [ZBX-5814] fixed an incorrect error message when saving an illegal trigger expression (Sasha)
A.F....... [ZBX-4247] fixed processing of trigger expression if item key contains another trigger expression string (Sasha)
..F....... [ZBX-2640] fixed some issues when creating and editing log triggers (Sasha)
..F....... [ZBX-5803] fixed message initialization memory leak in IE7 (Eduard)
..F....... [ZBX-5898] fixed Insert Macro button does not work in trigger constructor on IE7 and IE8 (Toms)
A......... [ZBX-5822] fixed macro in trigger names for unixtime and other types of units (Oleg)
.......PS. [ZBX-5697] fixed processing of external check parameters with the right square bracket (Sasha)
........S. [ZBX-5454] fixed encoding of long email subject line as required by RFC-2047; thanks to Jairo Eduardo Lopez Fuentes Nacarino (Andris)