@@ -37,6 +37,7 @@
 #include "log.h"
 
 #include "operations.h"
+#include "zbxserver.h"
 
 #include "poller/poller.h"
 #include "poller/checks_agent.h"
@@ -108,19 +109,34 @@ static void run_remote_command(char* host_name, char* command)
 		{
 			if (1 == atoi(row[6]))
 			{
-				zbx_strlcpy(item.host.ipmi_ip_orig, row[7], sizeof(item.host.ipmi_ip));
+				zbx_strlcpy(item.host.ipmi_ip_orig, row[7], sizeof(item.host.ipmi_ip_orig));
 				item.host.ipmi_port = (unsigned short)atoi(row[8]);
 				item.host.ipmi_authtype = atoi(row[9]);
 				item.host.ipmi_privilege = atoi(row[10]);
 				zbx_strlcpy(item.host.ipmi_username, row[11], sizeof(item.host.ipmi_username));
 				zbx_strlcpy(item.host.ipmi_password, row[12], sizeof(item.host.ipmi_password));
 			}
+			else
+			{
+				*item.host.ipmi_ip_orig = '\0';
+				item.host.ipmi_port = 623;
+				item.host.ipmi_authtype = 0;
+				item.host.ipmi_privilege = 2;
+				*item.host.ipmi_username = '\0';
+				*item.host.ipmi_password = '\0';
+			}
+
+			item.host.ipmi_ip = zbx_strdup(item.host.ipmi_ip, item.host.ipmi_ip_orig);
+			substitute_simple_macros(NULL, NULL, NULL, &item, NULL, &item.host.ipmi_ip,
+						MACRO_TYPE_HOST_IPMI_IP, NULL, 0);
 
 			if (SUCCEED == (ret = parse_ipmi_command(p, item.ipmi_sensor, &val)))
 			{
 				item.key = item.ipmi_sensor;
 				ret = set_ipmi_control_value(&item, val, error, sizeof(error));
 			}
+
+			zbx_free(item.host.ipmi_ip);
 		}
 		else
 		{
