@@ -1046,8 +1046,8 @@ int	set_ipmi_control_value(DC_ITEM *item, int value, char *error, size_t error_m
 		return NOTSUPPORTED;
 	}
 
-	h = init_ipmi_host(item->host.useip ? item->host.ip : item->host.dns, item->host.ipmi_port,
-			item->host.ipmi_authtype, item->host.ipmi_privilege, item->host.ipmi_username, item->host.ipmi_password);
+	h = init_ipmi_host(item->host.ipmi_ip, item->host.ipmi_port, item->host.ipmi_authtype,
+			item->host.ipmi_privilege, item->host.ipmi_username, item->host.ipmi_password);
 
 	if (0 == h->domain_up) {
 		if (NULL != h->err)
