@@ -2,6 +2,7 @@ Changes for 1.8.16
 
 Changes for 1.8.16rc1
 
+.......PS. [ZBX-6034] fixed IPMI remote commands and scripts, possible poller and escalator crash (dimir, Sasha)
 ...G...... [ZBX-5201] added handling of PerfCounter error PDH_CALC_NEGATIVE_DENOMINATOR (dimir)
 A......... [DEV-524] fixed the ability to override LDAP configuration when calling user.login (Pavels)
 .......PS. [ZBX-5988] fixed memory leak in functions evaluate_LOGEVENTID(), evaluate_STR(). Thanks to Takanori Suzuki for patch. (Andris)
